--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
             <artifactId>spring-session-data-redis</artifactId>
             <version>1.3.1.RELEASE</version>
         </dependency>
+        
+        
+        
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.22</version>
+		</dependency>
 	</dependencies>
 
 	<build>
